# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py
