[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain-games project"
authors = ["Your Name <you@example.com>"]
license = "no required"
readme = "README.md"
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"