[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain-games project"
authors = ["Your Name <you@example.com>"]
license = "no required"
readme = "README.md"
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
flake8 = "^7.1.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = 'brain_games.scripts.brain_calc:main"
[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"